fix overflow not working

--- a/style.css
+++ b/style.css
@@ -880,7 +880,8 @@ section.social-media {
 }
 
 /* CURVE styling */
-body {
+body,
+html {
   overflow-x: hidden;
 }
 /* These sections are affected by curve */
